<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>vimeo-downloader</groupId>
    <artifactId>vimeo.downloader</artifactId>
    <version>1.0.0</version>
    <name>Vimeo Downloader</name>
    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <pluginRepositories>
	    <pluginRepository>
		    <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>
    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
	    <dependency>
    	    <groupId>org.json</groupId>
	        <artifactId>json</artifactId>
	        <version>20190722</version>
	    </dependency>
	    <dependency>
  		    <groupId>commons-io</groupId>
  		    <artifactId>commons-io</artifactId>
  		    <version>2.6</version>
  	    </dependency>
  	    <dependency>
  		    <groupId>net.bramp.ffmpeg</groupId>
  		    <artifactId>ffmpeg</artifactId>
  		    <version>0.6.2</version>
	    </dependency>
    </dependencies>
</project>